--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="navbar">
-            <div><a class="navbar-e1" href="#" alt="Logo">Amazon</a></div>
+            <div><a class="navbar-e1" href="index.html" alt="Logo">Amazon</a></div>
             <div><a class="navbar-e2" href="#" alt ="Aaccount & Lists">Account & Lists</a></div>
             <div><a class="navbar-e3" href="#" alt="Returns & Orders">Returns & Orders</a></div>
             <div><a class="navbar-e4" href="#" alt="Cart">Cart</a></div>
