--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div><a class="navbar-e1" href="index.html" alt="Logo">Amazon</a></div>
             <div><a class="navbar-e2" href="#" alt ="Aaccount & Lists">Account & Lists</a></div>
             <div><a class="navbar-e3" href="#" alt="Returns & Orders">Returns & Orders</a></div>
-            <div><a class="navbar-e4" href="#" alt="Cart">Cart</a></div>
+            <div><a class="navbar-e4" href="cart.html" alt="Cart">Cart</a></div>
             <div><input type="text" class="search-bar" placeholder="Search..">
             <button class="search-btn">&#x1F50E</button></div>
         </div>
