--- a/cart.html
+++ b/cart.html
@@ -6,18 +6,24 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<body>
+    <header>
         <div class="navbar">
             <div><a class="navbar-e1" href="index.html" alt="Logo">Amazon</a></div>
             <div><a class="navbar-e2" href="#" alt ="Aaccount & Lists">Account & Lists</a></div>
-            <div><a class="navbar-e3" href="#" alt="Returns & Orders">Returns & Orders</a></div>
+            <div><a class="navbar-e3" href="order.html" alt="Returns & Orders">Returns & Orders</a></div>
             <div><a class="navbar-e4" href="cart.html" alt="Cart">Cart</a></div>
             <div><input type="text" class="search-bar" placeholder="Search..">
             <button class="search-btn">&#x1F50E</button></div>
+    </header>
+    <main>
         </div>
-<body>
     <div>
+        <div class = "Title" >
+        <h1 class="y1">Your Shopping Cart</h1>
+        </div>
         <div class = "cart-container">
-            <h1>Your Shopping Cart</h1>
+            
             <div class="cart-item">
                 <img src="image.png" alt="Headphones" class="cart-item-image">
                 <div class="cart-item-details">
@@ -45,10 +51,16 @@
                     <button class="remove-item-btn">Remove</button>
                 </div>
             </div>
-            <div class="cart-total">
+    </div>
+    <div class="cart-summary">
+        <div class="cart-total">
                 <h2>Total: $60.00</h2>
                 <button class="checkout-btn">Proceed to Checkout</button>
-            </div>
+        </div>
     </div>
+    </main>
+    <footer>
+        <p>&copy; 2024 Amazon. All rights reserved.</p>
+    </footer>
 </body>
 </html>
