--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="navbar">
             <div><a class="navbar-e1" href="index.html" alt="Logo">Amazon</a></div>
             <div><a class="navbar-e2" href="#" alt ="Aaccount & Lists">Account & Lists</a></div>
-            <div><a class="navbar-e3" href="#" alt="Returns & Orders">Returns & Orders</a></div>
+            <div><a class="navbar-e3" href="order.html" alt="Returns & Orders">Returns & Orders</a></div>
             <div><a class="navbar-e4" href="cart.html" alt="Cart">Cart</a></div>
             <div><input type="text" class="search-bar" placeholder="Search..">
             <button class="search-btn">&#x1F50E</button></div>
@@ -28,8 +28,8 @@
             <h2 class="section-title">Featured Products</h2>
             <div class="product-grid">
 
+                <div class="product-card">
                 <a class="products" href="https://www.amazon.in/s?k=headphones&crid=3RF06TDPHRB6R&sprefix=headphon%2Caps%2C195&ref=nb_sb_noss_2" target="headphones">
-                    <div class="product-card">
                     <img src="image.png" alt="Product Image">
                     <h2>Headphones</h2>
                     <p>$20.00</p></a>
@@ -37,16 +37,17 @@
                 </div>
                 
                 
+                <div class="product-card">
                 <a class="products" href="https://www.amazon.in/s?k=speakers&ref=nb_sb_noss_2" target="_blank">
-                    <div class="product-card">
                     <img src="image copy.png" alt="Product Image">
                     <h2>Speakers</h2>
                     <p>$20.00</p>
                 </a>
                 <button class="add-to-cart-btn">Add to Cart</button>
                 </div>
+
+                <div class="product-card">
                 <a class="products" href="https://www.youtube.com/@DhyeySamant" target="_blank">
-                    <div class="product-card">
                     <img src="image copy 2.png" alt="Product Image">
                     <h2>Vada Pav</h2>
                     <p>Rs.20.</p>
@@ -56,5 +57,8 @@
             </div>
         </div>
     </main>
+    <footer>
+        <p>&copy; 2024 Amazon. All rights reserved.</p>
+    </footer>
 </body>
 </html>
